Mismatch Calculation Packaging

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                     \r"
+      "                                                                      "
      ]
     },
     {
@@ -53,6 +53,13 @@
      "output_type": "stream",
      "text": [
       "MoviePy - Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
@@ -165,27 +172,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "target_phoneme_timestamps = [(2.6564625850340136, 2.756235827664399), (3.045578231292517, 3.1054421768707483), (6.248299319727891, 6.318140589569161), (12.30453514739229, 12.414285714285713), (16.315419501133785, 16.345351473922904), (22.840589569160993, 22.89047619047619), (24.52675736961451, 24.576643990929703), (25.48458049886621, 25.544444444444444), (34.384353741496604, 34.42426303854876), (36.040589569161, 36.070521541950114), (41.168934240362816, 41.208843537414964), (43.363945578231295, 43.41383219954648), (44.6609977324263, 44.81065759637188), (46.436961451247164, 46.50680272108844), (48.39251700680273, 48.462358276644), (53.2015873015873, 53.31133786848073), (55.45646258503402, 55.5562358276644), (58.210204081632654, 58.24013605442177), (64.19659863945579, 64.30634920634921), (64.47596371882086, 64.55578231292517)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,89 +213,187 @@
      "text": [
       "c:\\Reuben\\NITC\\Sem8\\Project Part 2\\deepfake-detection\n",
       "[INFO] loading facial landmark predictor...\n",
-      "Mouth aspect ratio:  82  items\n",
-      "['frame_0.jpg', 0.6519672003908359]\n",
-      "['frame_1.jpg', 0.7127129742374608]\n",
-      "['frame_10.jpg', 0.7000085230205618]\n",
-      "['frame_11.jpg', 0.7289289253239023]\n",
-      "['frame_12.jpg', 0.6805779497972586]\n",
-      "['frame_13.jpg', 0.5593763054319166]\n",
-      "['frame_14.jpg', 0.5995381054210127]\n",
-      "['frame_15.jpg', 0.5790898294964162]\n",
-      "['frame_16.jpg', 0.602977406587924]\n",
-      "['frame_17.jpg', 0.6201545886331685]\n",
-      "['frame_18.jpg', 0.6994376502272344]\n",
-      "['frame_19.jpg', 0.6111884932514334]\n",
-      "['frame_2.jpg', 0.6903683082676378]\n",
-      "['frame_20.jpg', 0.6228942959417321]\n",
-      "['frame_21.jpg', 0.6626337078088566]\n",
-      "['frame_22.jpg', 0.5507959505264843]\n",
-      "['frame_22.jpg', 0.5193889156877984]\n",
-      "['frame_23.jpg', 0.505699368813573]\n",
-      "['frame_23.jpg', 0.566968912404116]\n",
-      "['frame_24.jpg', 0.618048011946014]\n",
-      "['frame_24.jpg', 0.6606012906240639]\n",
-      "['frame_25.jpg', 0.7143155549055015]\n",
-      "['frame_25.jpg', 0.611463580984207]\n",
-      "['frame_26.jpg', 0.6131892273883314]\n",
-      "['frame_26.jpg', 0.5829675849706117]\n",
-      "['frame_27.jpg', 0.6328679893696624]\n",
-      "['frame_27.jpg', 0.6042946360676812]\n",
-      "['frame_28.jpg', 0.6772685299217708]\n",
-      "['frame_28.jpg', 0.6780543542686778]\n",
-      "['frame_29.jpg', 0.6889638678049046]\n",
-      "['frame_29.jpg', 0.6992570717808415]\n",
-      "['frame_3.jpg', 0.6877832194010036]\n",
-      "['frame_30.jpg', 0.7252997217715652]\n",
-      "['frame_30.jpg', 0.648549574388454]\n",
-      "['frame_31.jpg', 0.585558661439386]\n",
-      "['frame_31.jpg', 0.6417428947569209]\n",
-      "['frame_32.jpg', 0.6427171658287183]\n",
-      "['frame_32.jpg', 0.6851503428838168]\n",
-      "['frame_33.jpg', 0.650372790202268]\n",
-      "['frame_33.jpg', 0.6532464194982885]\n",
-      "['frame_34.jpg', 0.6328707132091373]\n",
-      "['frame_34.jpg', 0.647505062299879]\n",
-      "['frame_35.jpg', 0.6962399574136726]\n",
-      "['frame_35.jpg', 0.6317599310897637]\n",
-      "['frame_36.jpg', 0.6814186640106961]\n",
-      "['frame_36.jpg', 0.642824914631247]\n",
-      "['frame_37.jpg', 0.7017152302347568]\n",
-      "['frame_37.jpg', 0.6735687020939377]\n",
-      "['frame_38.jpg', 0.6822029030704305]\n",
-      "['frame_38.jpg', 0.6801318117746608]\n",
-      "['frame_39.jpg', 0.6638547548421584]\n",
-      "['frame_39.jpg', 0.6528676821173685]\n",
-      "['frame_4.jpg', 0.700284117611895]\n",
-      "['frame_40.jpg', 0.6311289885286012]\n",
-      "['frame_40.jpg', 0.6204910919793833]\n",
-      "['frame_41.jpg', 0.6178759437708752]\n",
-      "['frame_41.jpg', 0.6550193636551125]\n",
-      "['frame_42.jpg', 0.5754459003661927]\n",
-      "['frame_42.jpg', 0.661568313090691]\n",
-      "['frame_43.jpg', 0.6434614688096507]\n",
-      "['frame_43.jpg', 0.5306754618272523]\n",
-      "['frame_44.jpg', 0.6826885171352802]\n",
-      "['frame_44.jpg', 0.6876573279116833]\n",
-      "['frame_45.jpg', 0.6887420468814759]\n",
-      "['frame_45.jpg', 0.6681842935842239]\n",
-      "['frame_46.jpg', 0.5986036254554987]\n",
-      "['frame_46.jpg', 0.554471065001509]\n",
-      "['frame_47.jpg', 0.5802019692346241]\n",
-      "['frame_47.jpg', 0.6101114816079213]\n",
-      "['frame_48.jpg', 0.6135949903263291]\n",
-      "['frame_48.jpg', 0.6175110570850235]\n",
-      "['frame_49.jpg', 0.5989119921333818]\n",
-      "['frame_49.jpg', 0.5541088233970548]\n",
-      "['frame_5.jpg', 0.6483681456204393]\n",
-      "['frame_50.jpg', 0.5835574378541833]\n",
-      "['frame_50.jpg', 0.6439187740027815]\n",
-      "['frame_51.jpg', 0.6332490259381085]\n",
-      "['frame_51.jpg', 0.6966093821598263]\n",
-      "['frame_6.jpg', 0.5287401845736251]\n",
-      "['frame_7.jpg', 0.5273229108854793]\n",
-      "['frame_8.jpg', 0.5178026691787421]\n",
-      "['frame_9.jpg', 0.6213140454994921]\n"
+      "Mouth aspect ratio:  180  items\n",
+      "['Frame_0_0.jpg', 0.6519672003908359]\n",
+      "['Frame_0_1.jpg', 0.7127129742374608]\n",
+      "['Frame_0_2.jpg', 0.7127129742374608]\n",
+      "['Frame_0_3.jpg', 0.6903683082676378]\n",
+      "['Frame_0_4.jpg', 0.6903683082676378]\n",
+      "['Frame_0_5.jpg', 0.6877832194010036]\n",
+      "['Frame_10_0.jpg', 0.5507959505264843]\n",
+      "['Frame_10_0.jpg', 0.5193889156877984]\n",
+      "['Frame_10_1.jpg', 0.5507959505264843]\n",
+      "['Frame_10_1.jpg', 0.5193889156877984]\n",
+      "['Frame_10_2.jpg', 0.5507959505264843]\n",
+      "['Frame_10_2.jpg', 0.5193889156877984]\n",
+      "['Frame_10_3.jpg', 0.5507959505264843]\n",
+      "['Frame_10_3.jpg', 0.5193889156877984]\n",
+      "['Frame_10_4.jpg', 0.5507959505264843]\n",
+      "['Frame_10_4.jpg', 0.5193889156877984]\n",
+      "['Frame_10_5.jpg', 0.505699368813573]\n",
+      "['Frame_10_5.jpg', 0.566968912404116]\n",
+      "['Frame_11_0.jpg', 0.618048011946014]\n",
+      "['Frame_11_0.jpg', 0.6606012906240639]\n",
+      "['Frame_11_1.jpg', 0.618048011946014]\n",
+      "['Frame_11_1.jpg', 0.6606012906240639]\n",
+      "['Frame_11_2.jpg', 0.7143155549055015]\n",
+      "['Frame_11_2.jpg', 0.611463580984207]\n",
+      "['Frame_11_3.jpg', 0.7143155549055015]\n",
+      "['Frame_11_3.jpg', 0.611463580984207]\n",
+      "['Frame_11_4.jpg', 0.7143155549055015]\n",
+      "['Frame_11_4.jpg', 0.611463580984207]\n",
+      "['Frame_11_5.jpg', 0.7143155549055015]\n",
+      "['Frame_11_5.jpg', 0.611463580984207]\n",
+      "['Frame_12_0.jpg', 0.6131892273883314]\n",
+      "['Frame_12_0.jpg', 0.5829675849706117]\n",
+      "['Frame_12_1.jpg', 0.6328679893696624]\n",
+      "['Frame_12_1.jpg', 0.6042946360676812]\n",
+      "['Frame_12_2.jpg', 0.6772685299217708]\n",
+      "['Frame_12_2.jpg', 0.6780543542686778]\n",
+      "['Frame_12_3.jpg', 0.6772685299217708]\n",
+      "['Frame_12_3.jpg', 0.6780543542686778]\n",
+      "['Frame_12_4.jpg', 0.6889638678049046]\n",
+      "['Frame_12_4.jpg', 0.6992570717808415]\n",
+      "['Frame_12_5.jpg', 0.7252997217715652]\n",
+      "['Frame_12_5.jpg', 0.648549574388454]\n",
+      "['Frame_13_0.jpg', 0.585558661439386]\n",
+      "['Frame_13_0.jpg', 0.6417428947569209]\n",
+      "['Frame_13_1.jpg', 0.585558661439386]\n",
+      "['Frame_13_1.jpg', 0.6417428947569209]\n",
+      "['Frame_13_2.jpg', 0.6427171658287183]\n",
+      "['Frame_13_2.jpg', 0.6851503428838168]\n",
+      "['Frame_13_3.jpg', 0.6427171658287183]\n",
+      "['Frame_13_3.jpg', 0.6851503428838168]\n",
+      "['Frame_13_4.jpg', 0.6427171658287183]\n",
+      "['Frame_13_4.jpg', 0.6851503428838168]\n",
+      "['Frame_13_5.jpg', 0.650372790202268]\n",
+      "['Frame_13_5.jpg', 0.6532464194982885]\n",
+      "['Frame_14_0.jpg', 0.6328707132091373]\n",
+      "['Frame_14_0.jpg', 0.647505062299879]\n",
+      "['Frame_14_1.jpg', 0.6328707132091373]\n",
+      "['Frame_14_1.jpg', 0.647505062299879]\n",
+      "['Frame_14_2.jpg', 0.6328707132091373]\n",
+      "['Frame_14_2.jpg', 0.647505062299879]\n",
+      "['Frame_14_3.jpg', 0.6962399574136726]\n",
+      "['Frame_14_3.jpg', 0.6317599310897637]\n",
+      "['Frame_14_4.jpg', 0.6962399574136726]\n",
+      "['Frame_14_4.jpg', 0.6317599310897637]\n",
+      "['Frame_14_5.jpg', 0.6962399574136726]\n",
+      "['Frame_14_5.jpg', 0.6317599310897637]\n",
+      "['Frame_15_0.jpg', 0.6814186640106961]\n",
+      "['Frame_15_0.jpg', 0.642824914631247]\n",
+      "['Frame_15_1.jpg', 0.7017152302347568]\n",
+      "['Frame_15_1.jpg', 0.6735687020939377]\n",
+      "['Frame_15_2.jpg', 0.7017152302347568]\n",
+      "['Frame_15_2.jpg', 0.6735687020939377]\n",
+      "['Frame_15_3.jpg', 0.6822029030704305]\n",
+      "['Frame_15_3.jpg', 0.6801318117746608]\n",
+      "['Frame_15_4.jpg', 0.6822029030704305]\n",
+      "['Frame_15_4.jpg', 0.6801318117746608]\n",
+      "['Frame_15_5.jpg', 0.6638547548421584]\n",
+      "['Frame_15_5.jpg', 0.6528676821173685]\n",
+      "['Frame_16_0.jpg', 0.6311289885286012]\n",
+      "['Frame_16_0.jpg', 0.6204910919793833]\n",
+      "['Frame_16_1.jpg', 0.6178759437708752]\n",
+      "['Frame_16_1.jpg', 0.6550193636551125]\n",
+      "['Frame_16_2.jpg', 0.6178759437708752]\n",
+      "['Frame_16_2.jpg', 0.6550193636551125]\n",
+      "['Frame_16_3.jpg', 0.5754459003661927]\n",
+      "['Frame_16_3.jpg', 0.661568313090691]\n",
+      "['Frame_16_4.jpg', 0.5754459003661927]\n",
+      "['Frame_16_4.jpg', 0.661568313090691]\n",
+      "['Frame_16_5.jpg', 0.6434614688096507]\n",
+      "['Frame_16_5.jpg', 0.5306754618272523]\n",
+      "['Frame_17_0.jpg', 0.6826885171352802]\n",
+      "['Frame_17_0.jpg', 0.6876573279116833]\n",
+      "['Frame_17_1.jpg', 0.6826885171352802]\n",
+      "['Frame_17_1.jpg', 0.6876573279116833]\n",
+      "['Frame_17_2.jpg', 0.6826885171352802]\n",
+      "['Frame_17_2.jpg', 0.6876573279116833]\n",
+      "['Frame_17_3.jpg', 0.6887420468814759]\n",
+      "['Frame_17_3.jpg', 0.6681842935842239]\n",
+      "['Frame_17_4.jpg', 0.6887420468814759]\n",
+      "['Frame_17_4.jpg', 0.6681842935842239]\n",
+      "['Frame_17_5.jpg', 0.6887420468814759]\n",
+      "['Frame_17_5.jpg', 0.6681842935842239]\n",
+      "['Frame_18_0.jpg', 0.5986036254554987]\n",
+      "['Frame_18_0.jpg', 0.554471065001509]\n",
+      "['Frame_18_1.jpg', 0.5986036254554987]\n",
+      "['Frame_18_1.jpg', 0.554471065001509]\n",
+      "['Frame_18_2.jpg', 0.5802019692346241]\n",
+      "['Frame_18_2.jpg', 0.6101114816079213]\n",
+      "['Frame_18_3.jpg', 0.5802019692346241]\n",
+      "['Frame_18_3.jpg', 0.6101114816079213]\n",
+      "['Frame_18_4.jpg', 0.6135949903263291]\n",
+      "['Frame_18_4.jpg', 0.6175110570850235]\n",
+      "['Frame_18_5.jpg', 0.6135949903263291]\n",
+      "['Frame_18_5.jpg', 0.6175110570850235]\n",
+      "['Frame_19_0.jpg', 0.5989119921333818]\n",
+      "['Frame_19_0.jpg', 0.5541088233970548]\n",
+      "['Frame_19_1.jpg', 0.5835574378541833]\n",
+      "['Frame_19_1.jpg', 0.6439187740027815]\n",
+      "['Frame_19_2.jpg', 0.5835574378541833]\n",
+      "['Frame_19_2.jpg', 0.6439187740027815]\n",
+      "['Frame_19_3.jpg', 0.6332490259381085]\n",
+      "['Frame_19_3.jpg', 0.6966093821598263]\n",
+      "['Frame_19_4.jpg', 0.6332490259381085]\n",
+      "['Frame_19_4.jpg', 0.6966093821598263]\n",
+      "['Frame_19_5.jpg', 0.6332490259381085]\n",
+      "['Frame_19_5.jpg', 0.6966093821598263]\n",
+      "['Frame_1_0.jpg', 0.700284117611895]\n",
+      "['Frame_1_1.jpg', 0.700284117611895]\n",
+      "['Frame_1_2.jpg', 0.700284117611895]\n",
+      "['Frame_1_3.jpg', 0.700284117611895]\n",
+      "['Frame_1_4.jpg', 0.6483681456204393]\n",
+      "['Frame_1_5.jpg', 0.6483681456204393]\n",
+      "['Frame_2_0.jpg', 0.5287401845736251]\n",
+      "['Frame_2_1.jpg', 0.5273229108854793]\n",
+      "['Frame_2_2.jpg', 0.5273229108854793]\n",
+      "['Frame_2_3.jpg', 0.5273229108854793]\n",
+      "['Frame_2_4.jpg', 0.5178026691787421]\n",
+      "['Frame_2_5.jpg', 0.5178026691787421]\n",
+      "['Frame_3_0.jpg', 0.6213140454994921]\n",
+      "['Frame_3_1.jpg', 0.6213140454994921]\n",
+      "['Frame_3_2.jpg', 0.7000085230205618]\n",
+      "['Frame_3_3.jpg', 0.7000085230205618]\n",
+      "['Frame_3_4.jpg', 0.7289289253239023]\n",
+      "['Frame_3_5.jpg', 0.7289289253239023]\n",
+      "['Frame_4_0.jpg', 0.6805779497972586]\n",
+      "['Frame_4_1.jpg', 0.6805779497972586]\n",
+      "['Frame_4_2.jpg', 0.6805779497972586]\n",
+      "['Frame_4_3.jpg', 0.6805779497972586]\n",
+      "['Frame_4_4.jpg', 0.6805779497972586]\n",
+      "['Frame_4_5.jpg', 0.6805779497972586]\n",
+      "['Frame_5_0.jpg', 0.5593763054319166]\n",
+      "['Frame_5_1.jpg', 0.5593763054319166]\n",
+      "['Frame_5_2.jpg', 0.5995381054210127]\n",
+      "['Frame_5_3.jpg', 0.5995381054210127]\n",
+      "['Frame_5_4.jpg', 0.5995381054210127]\n",
+      "['Frame_5_5.jpg', 0.5995381054210127]\n",
+      "['Frame_6_0.jpg', 0.5790898294964162]\n",
+      "['Frame_6_1.jpg', 0.5790898294964162]\n",
+      "['Frame_6_2.jpg', 0.5790898294964162]\n",
+      "['Frame_6_3.jpg', 0.5790898294964162]\n",
+      "['Frame_6_4.jpg', 0.602977406587924]\n",
+      "['Frame_6_5.jpg', 0.602977406587924]\n",
+      "['Frame_7_0.jpg', 0.6201545886331685]\n",
+      "['Frame_7_1.jpg', 0.6201545886331685]\n",
+      "['Frame_7_2.jpg', 0.6201545886331685]\n",
+      "['Frame_7_3.jpg', 0.6201545886331685]\n",
+      "['Frame_7_4.jpg', 0.6994376502272344]\n",
+      "['Frame_7_5.jpg', 0.6994376502272344]\n",
+      "['Frame_8_0.jpg', 0.6111884932514334]\n",
+      "['Frame_8_1.jpg', 0.6111884932514334]\n",
+      "['Frame_8_2.jpg', 0.6111884932514334]\n",
+      "['Frame_8_3.jpg', 0.6111884932514334]\n",
+      "['Frame_8_4.jpg', 0.6228942959417321]\n",
+      "['Frame_8_5.jpg', 0.6228942959417321]\n",
+      "['Frame_9_0.jpg', 0.6626337078088566]\n",
+      "['Frame_9_1.jpg', 0.6626337078088566]\n",
+      "['Frame_9_2.jpg', 0.6626337078088566]\n",
+      "['Frame_9_3.jpg', 0.6626337078088566]\n",
+      "['Frame_9_4.jpg', 0.6626337078088566]\n",
+      "['Frame_9_5.jpg', 0.6626337078088566]\n"
      ]
     }
    ],
@@ -310,6 +404,18 @@
     "print(\"Mouth aspect ratio: \", len(mar), \" items\")\n",
     "for i in range(len(mar)):\n",
     "  print (mar[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mismatch Calculation\n",
+    "\n",
+    "MOUTH_AR_THRESH = 0.65\n",
+    "\n"
    ]
   }
  ],
