--- a/Components/CNN/cnn_model.ipynb
+++ b/Components/CNN/cnn_model.ipynb
@@ -7,9 +7,9 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+    "import keras\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
     "\n",
     "# Define the model\n",
     "model = Sequential()\n",
@@ -43,7 +43,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
