To remove all viseme frames code

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,6 +440,18 @@
     "error_rate = mismatch.calculate_mismatch_error_rate(mar_values, MOUTH_AR_THRESH)\n",
     "print(error_rate)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing all viseme frames\n",
+    "\n",
+    "for f in os.listdir(frame_path):\n",
+    "    os.remove(os.path.join(frame_path, f))"
+   ]
   }
  ],
  "metadata": {
@@ -458,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3rc1"
   },
   "orig_nbformat": 4,
   "vscode": {
